# heddle

./: .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.claude/: settings.json
contracts/: governance_read.v1.schema.json  reverify_worklist.v1.schema.json
docs/: CNAME  federation.md  getting-started.md  index.md
scripts/: check_no_member_diffs.sh  check_release_candidate.sh  check_source_grounding.py  maybe_check_member_diffs.sh  run_spike.sh
solution-architecture/: 00-scope-and-context.md  01-requirements.md  02-nfr-specification.md  04-solution-overview.md  05-tech-selection-rationale.md  06-descoped-and-deferred.md  07-c4-context.md  08-c4-containers.md  09-component-specifications.md  10-data-model.md  11-interface-contracts.md  13-deployment-view.md  15-integration-plan.md  17-risk-register.md
spike/: REPORT.md  SPIKE-BRIEF.md
tests/: test_anchor_capture.py  test_attest.py  test_cli_dispatch.py  test_commands.py  test_commands_reliability.py  test_completeness.py  test_consumer_ticket_package.py  test_cop.py  test_coupling.py  test_dogfood.py  test_enrichment_helpers.py  test_envelope_reasons.py  test_federation_consult.py  test_filigree_operator_docs.py  test_git_backfill.py  test_git_reachability.py  test_honesty_invariant.py  test_hooks.py  test_lazy_capture.py  test_legis_governance_client.py  test_list_ergonomics.py  test_locators.py  test_loomweave_probe.py  test_loomweave_snapshot_adapter.py  test_mcp.py  test_package.py  test_plainweave_requirements_client.py  test_product_workspace.py  (+19 more)
(+108 files in other folders)
