[project]
name = "heddle"
version = "0.1.0"
description = "Local-first temporal change-impact product for Weft federation workflows."
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=9.0.1",
    "ruff>=0.14.8",
]

[project.scripts]
heddle = "heddle.cli:main"
heddle-mcp = "heddle.mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["heddle"]
